--- a/css/application.css
+++ b/css/application.css
@@ -1,5 +1,6 @@
 :root {
-	--font-family: Helvetica, Arial, sans-serif;
+	--font-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	--font-monospace: "Monado", monospace;
 	--ivory: #FFFFF0;
 	--graphite: #333;
 	--red-primary: #B33D34;
@@ -16,7 +17,7 @@ html.html {
 }
 
 body.body {
-	font-family: var(--font-family);
+	font-family: var(--font-sans-serif);
 	font-size: 14px;
 	font-weight: 400;
 	background-color: var(--ivory);
@@ -28,9 +29,31 @@ main.main,
 footer.footer {
 	padding: 64px 128px 0 128px;
 }
+@media (max-width: 960px) {
+	header.header,
+	main.main,
+	footer.footer {
+		padding-left: 64px;
+		padding-right: 64px;
+	}
+}
+
+@media (max-width: 640px) {
+	header.header,
+	main.main,
+	footer.footer {
+		padding-left: 32px;
+		padding-right: 32px;
+	}
+}
 
 main.main {
 	padding-bottom: 64px;
+}
+@media (max-width: 960px) {
+	main.main {
+		padding-top: 16px;
+	}
 }
 
 div.main__container,
@@ -44,7 +67,12 @@ nav.nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	column-gap: 64px;
+	gap: 64px;
+}
+@media (max-width: 1280px) {
+	nav.nav {
+		flex-direction: column;
+	}
 }
 
 nav.nav--header {
@@ -74,7 +102,7 @@ ul.nav__ul {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	column-gap: 64px;
+	gap: var(--gap);
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -82,6 +110,10 @@ ul.nav__ul {
 
 ul.nav__ul--header {
 	align-items: center;
+}
+
+ul.nav__ul--column {
+	flex-direction: column;
 }
 
 li.nav__li {
@@ -115,13 +147,24 @@ a.a:visited {
 	color: var(--red-secondary);
 }
 
+a.a--dead {
+	text-decoration: line-through;
+}
+
 input.nav__input {
-	font-family: var(--font-family);
+	font-family: var(--font-sans-serif);
 	padding: 16px;
 	background-color: rgba(0, 0, 0, 0.05);
 	border-radius: 6px;
 	border: 2px solid transparent;
 	min-width: 256px;
+}
+@media (max-width: 1280px) {
+	form.nav__form,
+	input.nav__input {
+		display: block;
+		width: 100%;
+	}
 }
 
 input.nav__input:focus {
@@ -157,7 +200,7 @@ h1.h1 {
 
 h2.h2 {
 	font-size: calc(var(--gap) / 2);
-	margin: 0 var(--gap);
+	margin: var(--gap);
 	letter-spacing: -0.025em;
 	line-height: 1.35em;
 }
@@ -176,12 +219,17 @@ span.h2__span {
 }
 
 h3.h3 {
-	font-size: 16px;
-	margin: 16px 0 0 0;
+	font-size: 18px;
+	font-weight: 400;
+	margin: var(--gap) 0 0 0;
 }
 
-h3.h3:first-child {
+h3.h3:first-of-type {
 	margin-top: 0;
+}
+
+h4.h4 {
+	margin-top: var(--gap);
 }
 
 p.p {
@@ -197,9 +245,29 @@ ul.ul {
 	list-style: none;
 }
 
-li.li {
+ul.ul--grid {
+	padding-top: 16px;
+	border-top: 1px solid var(--border);
+}
+
+li.ul__li {
 	display: flex;
 	column-gap: 16px;
+}
+@media (max-width: 960px) {
+	li.ul__li {
+		display: block;
+	}
+}
+
+li.ul__li--grid {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+}
+@media (max-width: 960px) {
+	li.ul__li--grid {
+		grid-template-columns: 1fr;
+	}
 }
 
 div.row {
@@ -221,7 +289,8 @@ div.row:last-child {
 }
 
 div.row--grid {
-	grid-template-columns: repeat(2, 1fr);
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
 }
 
 div.row:last-child {
